fix get_ltp function with try except

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">5-EMA-SELL</a></li>
-                <li><a class="dropdown-item" href="#">15-EMA-BUY</a></li>
+                <li><a class="dropdown-item" href="/screener-15-ema">15-EMA-BUY</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
             </li>
