add script master and update get_ltp function to work for any instrument

--- a/templates/screener_15_ema.html
+++ b/templates/screener_15_ema.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %} {% block title %}15 {% endblock %} {% block content
 %}
-<h1 align="center">Positions</h1>
+<h1 align="center">15 EMA screener</h1>
 <body>
 
 <!-- {% for table in tables %}
