--- a/templates/screener_15_ema.html
+++ b/templates/screener_15_ema.html
@@ -3,9 +3,9 @@
 <h1 align="center">15 EMA screener</h1>
 <body>
 
-<!-- {% for table in tables %}
+{% for table in tables %}
             {{titles[loop.index]}}
             {{ table|safe }}
-{% endfor %} -->
+{% endfor %}
 </body>
 {% endblock %}
