--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
                 Screener
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">5-EMA-SELL</a></li>
+                <li><a class="dropdown-item" href="/screener-5-ema">5-EMA-SELL</a></li>
                 <li><a class="dropdown-item" href="/screener-15-ema">15-EMA-BUY</a></li>
                 <li><a class="dropdown-item" href="#">Something else here</a></li>
               </ul>
