add onclick button

--- a/templates/screener_5_ema.html
+++ b/templates/screener_5_ema.html
@@ -5,7 +5,12 @@
     <h2 align="center">5 EMA screener</h2>
     <div class="row">
       <div class="col md-2">
-        <input type="text" name="Date" id="date" class="form-control"/>
+        <form action="#" method="POST">
+          <p>Date</p>
+          <p><input type="text" name="Date" id="date" class="form-control"/></p>
+          <p><input type="submit" value="submit "/></p>
+        </form>
+        
       </div>
 
       <div class="col md-8">
