--- a/templates/screener_5_ema.html
+++ b/templates/screener_5_ema.html
@@ -3,6 +3,9 @@
 <body>
   <div class="container">
     <h2 align="center">5 EMA screener</h2>
+    <div class="alert alert-primary" role="alert">
+      Check for stocks in the current holdings portfolio where low of previous week is higher than 5 EMA of the closing price. If current LTP goes below the stock, it can indicate change in trend.
+    </div>
     <div class="row">
       <div class="col md-2">
         <form action="#" method="POST">
@@ -13,7 +16,24 @@
         </form>
         
       </div>
-    
+      <table id="myTable" class="display datatble">
+        <thead>
+            <tr>
+                <th>Column 1</th>
+                <th>Column 2</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Row 1 Data 1</td>
+                <td>Row 1 Data 2</td>
+            </tr>
+            <tr>
+                <td>Row 2 Data 1</td>
+                <td>Row 2 Data 2</td>
+            </tr>
+        </tbody>
+    </table>
       <div class="col md-8">
         {% for table in tables %}
                   {{titles[loop.index]}}
@@ -34,6 +54,13 @@
     $.datepicker.formatDate('yy-mm-dd', dateTypeVar);
     // $( "#date" ).datepicker(dateFormat: 'YY-mm-dd' );
   } );
+  </script>
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.4/css/jquery.dataTables.css" />
+  <script src="https://cdn.datatables.net/1.13.4/js/jquery.dataTables.js"></script>
+  <script>
+    $(document).ready(function () {
+        $('#myTable').DataTable();
+    });
   </script>
 </body>
 {% endblock %}
